overflow scroll fix

--- a/css/style.css
+++ b/css/style.css
@@ -1542,3 +1542,10 @@ h1 {
 .img-round{
   border-radius: 50%;
 }
+
+@media (min-width: 10px){
+  body{
+    overflow-x: hidden !important;
+    width: 100%;
+  }
+}
